--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 ---
 name: PlayerSelectors
 author:  Ad5001
-version: 1.0
-api: [3.0.0-ALPHA9]
+version: 1.4
+api: [3.0.0]
 main: Ad5001\PlayerSelectors\Main
 commands: []
 permissions: []
